k8s/ingress.yaml
## OJO, asi está preparado para que responda al dominio "python-app.test.com"
## para ello hay que simular un DNS metiendo la entrada en el etc/host 127.0.0.1 python-app.test.com

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app
spec:
  ingressClassName: nginx
  rules:
  - host: "python-app.test.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app
            port:
              number: 8080
